*SVN*

* Demote Hash#to_xml to use XmlSimple#xml_in_string so it can't read files or stdin.  #8453 [candlerb, Jeremy Kemper]

* Backport clean_logger changes to support ruby 1.8.2 [mislav]

* Added proper handling of arrays #8537 [hasmanyjosh]

  Before:
    Hash.from_xml '<images></images>'
    # => {:images => nil}

    Hash.from_xml '<images><image>foo.jpg</image></images>'
    # => {:images => {:image => "foo.jpg"}}

    Hash.from_xml '<images><image>foo.jpg</image><image>bar.jpg</image></images>'
    # => {:images => {:image => ["foo.jpg", "bar.jpg"]}}

  After:
    Hash.from_xml '<images type="array"></images>'
    # => {:images => []}

    Hash.from_xml '<images type="array"><image>foo.jpg</image></images>'
    # => {:images => ["foo.jpg"]}

    Hash.from_xml '<images type="array"><image>foo.jpg</image><image>bar.jpg</image></images>'
    # => {:images => ["foo.jpg", "bar.jpg"]}

* Improve Time and Date test coverage.  #8646 [Josh Peek]

* Add Date#since, ago, beginning_of_day, and end_of_day. Date + seconds works now.  #8575 [Geoff Buesing]

* String#to_time overflows to DateTime. Add String#to_datetime.  #8572 [Geoff Buesing]

* Date.yesterday and .tomorrow.  #8571 [Geoff Buesing]

* Readable Date and DateTime#inspect.  #8570 [Geoff Buesing]

* Move common DateTime calculations to Date.  #8536 [Geoff Buesing]

* Added Date#change (like Time#change) [DHH]

* DateTime#to_time converts to Time unless out of range.  #8512 [Geoff Buesing]

* Date#to_datetime, #to_s(:rfc822).  #8512 [Geoff Buesing]

* Time durations use since instead of + for accuracy.  #8513 [Geoff Buesing]

* escape <'s and >'s in JSON strings. #8371 [Rick]

* Inflections: MatrixTest -> MatrixTests instead of MatricesTest.  #8496 [jbwiv]

* Multibyte strings respond_to the String methods they proxy so they can be duck-typed.  #6549 [Tuxie]

* Array#to_xml yields the builder just like Hash and ActiveRecord::Base.  #8472 [seth]
