@@ -47,6 +47,7 @@ Inflector.inflections do |inflect|
   inflect.irregular('child', 'children')
   inflect.irregular('sex', 'sexes')
   inflect.irregular('move', 'moves')
+  inflect.irregular('cow', 'kine')
 
   inflect.uncountable(%w(equipment information rice money species series fish sheep))
 end
